# ChangeLog for dev-qt/qtsingleapplication
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtsingleapplication/ChangeLog,v 1.14 2015/05/10 14:16:36 pesa Exp $

*qtsingleapplication-2.6.1_p20130904-r3 (10 May 2015)

  10 May 2015; Davide Pesavento <pesa@gentoo.org>
  +files/qtsinglecoreapplication.prf,
  +qtsingleapplication-2.6.1_p20130904-r3.ebuild,
  -files/qtsingleapplication5.prf,
  -qtsingleapplication-2.6.1_p20130904-r2.ebuild, files/qtsingleapplication.prf,
  qtsingleapplication-2.6.1_p20130904-r1.ebuild:
  Use improved .prf files from Fedora.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org>
  qtsingleapplication-2.6.1_p20130904-r1.ebuild,
  qtsingleapplication-2.6.1_p20130904-r2.ebuild:
  Add ~ppc64, wrt bug #488996

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org>
  qtsingleapplication-2.6.1_p20130904-r1.ebuild,
  qtsingleapplication-2.6.1_p20130904-r2.ebuild:
  Add ~ppc, wrt bug #488996

  18 Feb 2015; Davide Pesavento <pesa@gentoo.org>
  qtsingleapplication-2.6.1_p20130904-r2.ebuild:
  Simplify pkg_setup().

  11 Feb 2015; Patrick Lauer <patrick@gentoo.org>
  qtsingleapplication-2.6.1_p20130904-r2.ebuild:
  Whitespace

*qtsingleapplication-2.6.1_p20130904-r2 (02 Jan 2015)

  02 Jan 2015; Michael Palimaka <kensington@gentoo.org>
  +files/qtsingleapplication5.prf,
  +qtsingleapplication-2.6.1_p20130904-r2.ebuild:
  Add Qt 5 support wrt bug #534304.

  14 Jul 2014; Davide Pesavento <pesa@gentoo.org>
  qtsingleapplication-2.6.1_p20130904-r1.ebuild:
  x86 stable wrt bug #514896

  11 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
  qtsingleapplication-2.6.1_p20130904-r1.ebuild:
  amd64 stable wrt bug #514896

*qtsingleapplication-2.6.1_p20130904-r1 (24 May 2014)

  24 May 2014; Davide Pesavento <pesa@gentoo.org>
  +qtsingleapplication-2.6.1_p20130904-r1.ebuild,
  -files/qtsingleapplication-2.6.1-examples.patch,
  -files/qtsingleapplication-2.6.1-gcc47.patch,