@@ -7,25 +7,25 @@ AUX qtsingleapplication.prf 255 SHA256 55a443957678e5c8f9547ef122bc9297fb62d157a
 AUX qtsinglecoreapplication.prf 240 SHA256 a4f102476419d091ae42e7549f68862a31273de2a7c902cf323a0d376efd99da SHA512 c2900d6d2e7edc680435d88a67e4dbc3e1913b454413370f2c66d81249e41e0b3f037abb5e0ee2c4d3dafac7e7eb1a3db963b11c4805ed9cfc25553829ce20ac WHIRLPOOL 49fafc23df22aebea4cd75c66dcf9f05dabe694a649fb5beca54a22948eab069377b30fc3784f40455c95225d02ddafd979e13145ec6ed09e0f06c2f11c6d447
 DIST qt-solutions-20130904.tar.xz 751536 SHA256 fc27b49883269a21ced2d3cb543eb78e79223afe5933bbc7d3194146f72f8884 SHA512 9e50d0a7d9fee08a72a3c6dee1d3fe45d04ae0930a967d81eff457f6c0ff53ac8449ef1d8241a5ce75ca2dcf9f4a2fe27b899647748d11060c3ab5767c3d0e75 WHIRLPOOL b933a301de905cffab8393a7adf055ed2f5198f1572657f5993e016746340d9862017982308ac11310add272ae1cd5c3435054dce2dd9d7ee5a9c92baf1878c2
 EBUILD qtsingleapplication-2.6.1_p20130904-r1.ebuild 1475 SHA256 cce9c000738e7dc7feda1cd9c41b5a5bdbc4b5bb8cad8e80366c4b7ac732ddd1 SHA512 a114bf3a565477ff7a54b6550c8f15ba965b4fe6a631a62e568b5b2939811c85616cd2906a4009fabf1b642d2eab6d930f43398dd1878dd9c1373b2ad31ac0a4 WHIRLPOOL a8391f716846a2d6f7ac95497d2c57f85dafac4deadabad62486d1bfc05c26908a86d8b74bd89bd87aaecc6544e2d6120a218cdc6a595886aeb71da5af1b1c91
-EBUILD qtsingleapplication-2.6.1_p20130904-r3.ebuild 2500 SHA256 df72885f3aeaa9b7880fa3a59b11cdbd1e865b1f29fddcf5851a0395ec543838 SHA512 5c65672a93e53a38584563b215fba39027d8b4d53d6bcab222a17b3fd0345ac985cb5f454a876746ca15beea031df38f190b1a673e34ee5e35d0126e81c7daf0 WHIRLPOOL 6afc33c80e32f7023b7ac6bc9323643a35d198fd26ccddd43da56804cf1a12d7417e34a55a0aa5a9f4097ba403a9bc992e2d14383196529a48af423a40c6c88e
-MISC ChangeLog 3379 SHA256 ff3c7a319701f638f206f54ac06750a6a1497d49675ef466fc47ff675895d51f SHA512 e5ef71dc4cc4cd10423c5e4681cd32b2bd6c823fd2b98053da5a093fb14b45a032815f326ff71b464c7ac9cc6815cc98e6c9347a0f2c36f663d283a6aa70a275 WHIRLPOOL 1dab3122b8c999e2c595760ed7de7f58b1ea6d76188bee23908354f7be215e475ffb7edd7bbddba92a7657e7ede0b1eea31050075f63c88d304f6d9473f160c2
+EBUILD qtsingleapplication-2.6.1_p20130904-r3.ebuild 2199 SHA256 a97a3b2c9c8e0ac20a6f06c2b3c61328285bfcc8af8f31c5eecee47c9529b45f SHA512 cc4bc751f4832936c04c8d8bfef492b6699f22ddcf3c974e79f8a7ff9edf5b53654401894ee2af99c5d2c4f3c5e4f82bd5a91bcfae915a55e2c90a4a70a7e903 WHIRLPOOL 52772b0d7d6f1ca3a7599e5a502c21ebd7452302f44f09b000303bea295e7cac081d4580f2755e0b4de2b9c2f16762d2606733f7d9bc02dd3b8c8102ad8b20a4
+MISC ChangeLog 3515 SHA256 7d050e306e9313009b9eff862077591b757e1666ca06a6692b6d5ca068dd67fc SHA512 531aeaa56a55939e95356cfc30c471232923008c6e66811b320ce326fad5a37cee8f5fa293981d5f894c4e059e6b1f17f00c6bcde60087f3783954ff6b842d45 WHIRLPOOL 05cc04f853796ea19e95c9c712b43a2d0c2cc77d688ef9f94e188e88522dadb2df121ed8bf1e891cff5f221dbaa2248f0c26d755b0f75af7bbe742149fd4a1d4
 MISC metadata.xml 156 SHA256 2bc85ad7339ae0191c26e435f2da777058779a7ebf73d14658a6ea7bfcec01b2 SHA512 d9991797d488000e1b306b9d97982fb862fbb44d72d4f7560e3ab12ba2022a7abdd3a71bd971a18f562edefc6948e5d5db0972425f7ebe7208696678f1c17b45 WHIRLPOOL aa1bf1df6e2bb4c13c1eae59bfa12dcfe4b81794562c52538f037c75d706f415fed1acc302501cd5f3017b13c910cadbbb9b823a0625cd3b64b29b860259492e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVT2hFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVT3xKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
-QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9g4UQAL9OE0wzwJQjP3SiuTA6TNYm
-goEe3Fu3F3LfrxdRx2JlKnso+3b+Zhz/doz8l7ox+cXxTriCxBq3D25pX1gBnbkh
-5k+8dU2I0p5FPIQH/0V2ReglfKDZnHEL/kzU2+rZZ0BSwiF8rV/D2qQkdwP/wP/L
-oMEU4d7iaRir9AyIl/hI8x5D3a7+shobXoytu09IRMr7WTcpqjpcPQPI3MQAgmC8
-gu5fihnpCGXODrFFvEjLTKU60xzm05FH6Hp+KAGkQDvr2R3BRO6Wxl4SSpAxDxZQ
-X1949nyRSoZws3IqySOaOAhSBYogiGqbLMs+8qf0ia3wAEgs02UMsGmkeEvRyOOP
-5SU3A4DoWG6oPBZkco7GwB3A+lBEU4sUiqlK9DQTgU++PWrAA6Buxo03NbTu6Eun
-qaO1kJ9crIy5tYk0qzCfYv80ZDhoPuR9ce+T7OL6Cvjr7Uq/fY73ucZsnvobwTJj
-+/d3gpeRSrl72TTEZ2DVICT7ZcoFCKHwKjZ9ckRvr3NzB3ZKdq6+jZsUjlsXlMoq
-fo8etkHcAl6q/8zcilKVGju1o0fMl9OJgmxUmeIKK61RyMAXJHaUuVISpUzktByo
-96cPXqoU4MtvvTta1IwpLAHqgJ/PAD/x56NsbqVWudJtUNU6YT60PjoJcF4yrreI
-tK5hyRsPkXtYARIu+FnL
-=8GKn
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV925gQAJ1EGglfomKoxdUfYq9TME7S
+khYhXS5vRw24BlBLhrSRIv2QlYfYxhfz1DEC9vTmpJa0OzAv8J3gU3KkY/Eqmt2h
+NV1yv+yFIROfkfB3Ek7QqrGx7Q2tgN4pxN4+aZ+MjiozO8OCfmTv6+pY3D/WOpGp
+000CBnesCSoMneqy67bxaCgu3QMrxKjRP1meSnxdleTlkFjtAOxPG/jTvLnQdHus
+MF2t2RND+esrCzP4Xwnl6KxXs+2cRTmTNMO1VQMGDoilg8F/DJFOpxvx/OvHwOn3
+tp0aCzBJsognNdYLRFEobeIZXs5ii8+NcPtENIKvkCaft2q+8jH00qD+lXCb3ZJ+
+tgOgorkzu/BxZmLvzUfB2mxHh91wlj/02exuK+1LSHBweOfgei5S5hrDZnxmn0+G
+jcSP4ayNNYccyMuGEk0fPwrfrZM3UbjFpWrh90NjNpymX+VqzLZii8J1jbc6Eejz
+iF+ttYZYzB7bffm3oNIFjssLtAkfKMq/FD87Ujx06fDemzBVHGNosAWQSgr5GZ34
+gD061ebCX6xkAFpS2gbiHjA5fPiZ+6qiA42t/Y8vcRgMjIEYddSbBr/fSa3YYUaB
+WPwMcQNISduWRrsuFZNxE1NOXjbdHYx0T0MRGarJeI3ryboUQpHqf6RTyL0w0FKA
+6HIZQq5EpwDEw4Zb1k9o
+=Ogjz
 -----END PGP SIGNATURE-----
