@@ -1,6 +1,10 @@
 # ChangeLog for dev-qt/qtsingleapplication
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtsingleapplication/ChangeLog,v 1.14 2015/05/10 14:16:36 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtsingleapplication/ChangeLog,v 1.15 2015/05/10 15:41:54 pesa Exp $
+
+  10 May 2015; Davide Pesavento <pesa@gentoo.org>
+  qtsingleapplication-2.6.1_p20130904-r3.ebuild:
+  Use qmake-utils helper functions.
 
 *qtsingleapplication-2.6.1_p20130904-r3 (10 May 2015)
 
